[gd_scene load_steps=3 format=3 uid="uid://dh11d35u0h6w5"]

[ext_resource type="Script" path="res://Menu.gd" id="1_otdq2"]
[ext_resource type="PackedScene" uid="uid://1b8ty1dlpxmq" path="res://LobbyMenu.tscn" id="1_r4b2r"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_otdq2")

[node name="LobbyMenu" parent="." instance=ExtResource("1_r4b2r")]

[connection signal="create_server" from="LobbyMenu" to="." method="_on_lobby_menu_create_server"]
[connection signal="join_server" from="LobbyMenu" to="." method="_on_lobby_menu_join_server"]
